# computer-graphics

./: .gitignore  CMakeLists.txt  README.md  REAMD.md  REAMDE.md  glad.c  main.cpp
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt
cmake/src/01-main/: CMakeLists.txt
cmake/src/01-window/: CMakeLists.txt
cmake/src/01-window/main/: CMakeLists.txt
cmake/src/01-window/refactor/: CMakeLists.txt
cmake/src/02-triangle/: CMakeLists.txt
cmake/src/02-triangle/01-triangle/: CMakeLists.txt
cmake/src/02-triangle/02-EAO/: CMakeLists.txt
cmake/src/02-triangle/03-drawArray/: CMakeLists.txt
cmake/src/02-triangle/04-diff-buff/: CMakeLists.txt
cmake/src/02-triangle/05-two-program/: CMakeLists.txt
cmake/src/02-triangle/practice/: CMakeLists.txt
cmake/src/03-shaders/: CMakeLists.txt
cmake/src/03-shaders/01-glsl/: CMakeLists.txt
cmake/src/03-shaders/02-uniform/: CMakeLists.txt
cmake/src/03-shaders/03-more-attr/: CMakeLists.txt
cmake/src/03-shaders/04-shader-class/: CMakeLists.txt
cmake/src/03-shaders/05-x-vertex-move/: CMakeLists.txt
cmake/src/03-shaders/06-fs-by-vs/: CMakeLists.txt
cmake/src/03-shaders/07-cmake-logo/: CMakeLists.txt
cmake/src/04-textures/: CMakeLists.txt
cmake/src/04-textures/01-textures/: CMakeLists.txt
cmake/src/04-textures/02-more-textures/: CMakeLists.txt
cmake/src/04-textures/03-four-face/: CMakeLists.txt
cmake/src/04-textures/04-single-texel/: CMakeLists.txt
cmake/src/04-textures/05-key-visible/: CMakeLists.txt
cmake/src/04-textures/refactor/: CMakeLists.txt
cmake/src/05-transformations/: CMakeLists.txt
cmake/src/05-transformations/01-rotating/: CMakeLists.txt
cmake/src/05-transformations/02-animation/: CMakeLists.txt
cmake/src/06-coordinate/: CMakeLists.txt
cmake/src/06-coordinate/01-3d/: CMakeLists.txt
cmake/src/06-coordinate/02-more-3d/: CMakeLists.txt
cmake/src/06-coordinate/03-more-cube/: CMakeLists.txt
cmake/src/07-camera/: CMakeLists.txt
cmake/src/07-camera/01-camera/: CMakeLists.txt
cmake/src/07-camera/02-freedom-move/: CMakeLists.txt
cmake/src/07-camera/03-camera-mouse/: CMakeLists.txt
cmake/src/07-camera/04-camera-class/: CMakeLists.txt
cmake/src/09-colors/: CMakeLists.txt
cmake/src/09-colors/01-color/: CMakeLists.txt
cmake/src/10-lighting/: CMakeLists.txt
cmake/src/10-lighting/01-lighting/: CMakeLists.txt
cmake/src/10-lighting/02-cube-rotating/: CMakeLists.txt
cmake/src/11-materials/: CMakeLists.txt
cmake/src/11-materials/01-materials/: CMakeLists.txt
cmake/src/12-lighting-maps/: CMakeLists.txt
cmake/src/12-lighting-maps/01-lighting-maps/: CMakeLists.txt
cmake/src/12-lighting-maps/03-emission-maps/: CMakeLists.txt
cmake/src/glad/: CMakeLists.txt
cmake/src/test/: CMakeLists.txt
cmake/src/test/glm/: CMakeLists.txt
cmake/src/test/imgui/: CMakeLists.txt
cmake/src/test/process-input/: CMakeLists.txt
cmake/src/test/use-imgui-utils/: CMakeLists.txt
dependencies/include/: shader_s.h  stb_image.h
dependencies/include/glad/: glad.h
dependencies/include/tools/: camera.h
mooc/: 01.my-test.cpp  01.test.cpp
src/01-main/: main.cpp
src/01-window/: README.md  main.cpp
src/01-window/main/: main.cpp
src/01-window/refactor/: main.cpp
src/02-triangle/: main.cpp
src/02-triangle/01-triangle/: main.cpp
src/02-triangle/02-EAO/: main.cpp
src/02-triangle/03-drawArray/: main.cpp
src/02-triangle/04-diff-buff/: main.cpp
src/02-triangle/05-two-program/: main.cpp
src/03-shaders/: README.md
src/03-shaders/01-glsl/: main.cpp
src/03-shaders/02-uniform/: main.cpp
src/03-shaders/03-more-attr/: main.cpp
src/03-shaders/04-shader-class/: main.cpp  shader.vs.glsl  test.cpp
src/03-shaders/04-shader-class/resources/: shader.fs.glsl  shader.vs.glsl
src/03-shaders/05-x-vertex-move/: main.cpp
src/03-shaders/05-x-vertex-move/resources/: shader.vs.glsl
src/03-shaders/06-fs-by-vs/: main.cpp
src/03-shaders/06-fs-by-vs/resources/: shader.vs.glsl
src/03-shaders/07-cmake-logo/: main.cpp
src/03-shaders/07-cmake-logo/resources/: shader.fs.glsl  shader.vs.glsl
src/04-textures/01-textures/: main.cpp
src/04-textures/01-textures/resources/: shader.fs.glsl
src/04-textures/02-more-textures/: main.cpp
src/04-textures/02-more-textures/resources/: shader.fs.glsl
src/04-textures/03-four-face/: main.cpp
src/04-textures/03-four-face/resources/: shader.fs.glsl
src/04-textures/04-single-texel/: main.cpp
src/04-textures/04-single-texel/resources/: shader.vs.glsl
src/04-textures/05-key-visible/: main.cpp
src/04-textures/05-key-visible/resources/: shader.fs.glsl
src/04-textures/refactor/: main.cpp
src/04-textures/refactor/resources/: shader.fs.glsl
src/05-transformations/01-rotating/: main.cpp
src/05-transformations/02-animation/: main.cpp
src/05-transformations/02-animation/resources/: shader.fs.glsl  shader.vs.glsl
src/06-coordinate/01-3d/: main.cpp
src/06-coordinate/01-3d/resources/: shader.vs.glsl
src/06-coordinate/02-more-3d/: main.cpp
src/06-coordinate/03-more-cube/: main.cpp
src/06-coordinate/03-more-cube/resources/: shader.vs.glsl
src/07-camera/01-camera/: main.cpp
src/07-camera/02-freedom-move/: main.cpp
src/07-camera/03-camera-mouse/: main.cpp
src/07-camera/04-camera-class/: main.cpp
src/09-colors/01-color/: main.cpp
src/09-colors/01-color/resources/: cube.fs.glsl  lighting.vs.glsl
src/10-lighting/01-lighting/: main.cpp
src/10-lighting/01-lighting/resources/: cube.fs.glsl
src/10-lighting/02-cube-rotating/: main.cpp
src/10-lighting/02-cube-rotating/resources/: cube.vs.glsl  lighting.fs.glsl
src/11-materials/01-materials/: main.cpp
src/11-materials/01-materials/resources/: cube.fs.glsl
src/12-lighting-maps/01-lighting-maps/: main.cpp
src/12-lighting-maps/01-lighting-maps/resources/: cube.fs.glsl  (+1 more)
src/12-lighting-maps/02-specular-lighting-maps/: main.cpp
src/12-lighting-maps/03-emission-maps/: main.cpp
src/utils/: camera-utils.cpp  imgui-utils.cpp  init-window.cpp  init-window.h  texture-utils.cpp  texture-utils.h
test/: glm.cpp  imgui.cpp  pointer.cpp  process-input.cpp  use-imgui-utils.cpp
(+3 files in other folders)
